--- a/frontend-p4/src/App.css
+++ b/frontend-p4/src/App.css
@@ -1,4 +1,10 @@
-body{
+html, body{
   margin: 0;
   padding: 0;
+  background-color: #232323;
+  color: antiquewhite;
 }
+
+/* h1{
+  margin-top: 0;
+} */
